--- a/app-web/static/css/style.css
+++ b/app-web/static/css/style.css
@@ -31827,10 +31827,12 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 	}
 }
 
-.boton-servicios-contratados {
-	border-width: 1px;
-	border-radius: 15px;
-	color: #000;
+.button-cancelar-servicio {
+	height: 16px;
+	margin-top: 0;
+	padding: 5px 15px 25px 15px;
+	text-align: center;
+	
 }
 
 .input-servicios-contratados {
@@ -31838,4 +31840,14 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 	border: none;
 	color: black;
 	font-size: 16px;
+}
+
+.container-lista-servicios {
+	margin: auto;
+}
+
+.item-lista-servicio {
+	color: black;
+	font-size: 16px;
+	text-align: center;
 }
