--- a/app-web/templates/serviciosContratados.html
+++ b/app-web/templates/serviciosContratados.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {%block title%} Reservas {%endblock title%} {%block content%}
+{% extends 'base.html' %} {%block title%} Servicios reserva Nº{{servicios_contratados[0].numero_reserva}} {%endblock title%} {%block content%}
 
 <h3>Servicios de la <br> reserva Nº {{servicios_contratados[0].numero_reserva}}</h3>
 
@@ -9,7 +9,7 @@
     <input type="text" name="id_servicio" id="id_servicio" value="{{servicio.id_servicio}}" hidden>
     <input type="text" name="numero_reserva" id="numero_reserva" value="{{servicio.numero_reserva}}" hidden>
     <input class="input-servicios-contratados" type="text" name="nombre_servicio" id="nombre_servicio" value="{{servicio.nombre_servicio}}" readonly>
-    <button class="boton-servicios-contratados" type="submit">Cancelar servicio</button>
+    <button class="button button-cancelar-servicio button-primary button-square" type="submit">Cancelar servicio</button>
     <br>
     
   </form>
