--- a/app-web/templates/index.html
+++ b/app-web/templates/index.html
@@ -70,9 +70,9 @@
               <div class="cell-lg-12 cell-md-4">
                 <p class="text-uppercase">Hotel </p>
                 <div class="form-wrap">
-                 <input type="hidden" name="id_hotel" id="id_hotel">
-                <select id="hotel-options" onchange="updateHotelName()">
-                  <option value="">Selecciona un hotel...</option>
+                 <input type="hidden" name="id_hotel" id="id_hotel" data-constraints="@Required" required>
+                <select style="width: 310px;" id="hotel-options" onchange="updateHotelName()">
+                  <option class="form-options" value="">Selecciona un hotel...</option>
                   {%for i in hoteles %}
                     <option id="{{ i['id_hotel'] }}" value"{{ i['id_hotel'] }}">{{ i['nombre'] }}</option>
                   {% endfor %}
@@ -82,14 +82,14 @@
               <div class="cell-lg-12 cell-md-4">
                 <p class="text-uppercase">Nombre </p>
                 <div class="form-wrap">
-                  <input class="form-input" id="contact-first-name" type="text" name="nombre" data-constraints="@Required" autocomplete="on" />
+                  <input class="form-input" id="contact-first-name" type="text" name="nombre" data-constraints="@Required" autocomplete="on" required />
                   <label class="form-label" for="contact-first-name">Nombre</label>
                 </div>
               </div>
               <div class="cell-lg-12 cell-md-4">
                 <p class="text-uppercase">Apellido</p>
                 <div class="form-wrap">
-                  <input class="form-input" id="contact-last-name" type="text" name="apellido" data-constraints="@Required" autocomplete="on" />
+                  <input class="form-input" id="contact-last-name" type="text" name="apellido" data-constraints="@Required" autocomplete="on" required/>
                   <label class="form-label" for="contact-last-name">Apellido</label>
                 </div>
               </div>
@@ -97,23 +97,23 @@
                 <p class="text-uppercase">Entrada</p>
                 <div class="form-wrap">
                   <label class="form-label form-label-icon" for="inicio_reserva"><span class="icon icon-primary fa-calendar"></span><span>Fecha de entrada</span></label>
-                  <input class="form-input" id="inicio_reserva" data-time-picker="date" type="text" name="inicio_reserva" data-constraints="@Required" role="button"/>
+                  <input class="form-input" id="inicio_reserva" data-time-picker="date" type="text" name="inicio_reserva" data-constraints="@Required" role="button" required/>
                 </div>
               </div>
               <div class="cell-lg-12 cell-md-4 cell-sm-6">
                 <p class="text-uppercase">Salida</p>
                 <div class="form-wrap">
                   <label class="form-label form-label-icon" for="fin_reserva"><span class="icon icon-primary fa-calendar"></span><span>Fecha de salida</span></label>
-                  <input class="form-input" id="fin_reserva" data-time-picker="date" type="text" name="fin_reserva" data-constraints="@Required" role="button"/>
+                  <input class="form-input" id="fin_reserva" data-time-picker="date" type="text" name="fin_reserva" data-constraints="@Required" role="button" required/>
                 </div>
               </div>
               <div class="cell-lg-12 cell-md-4">
                 <p class="text-uppercase">DNI</p>
                 <div class="form-wrap">
-                  <input class="form-input" id="dni" type="text" name="dni" data-constraints="@Required" autocomplete="on" />
+                  <input class="form-input" id="dni" type="text" name="dni" data-constraints="@Required" autocomplete="on" required/>
                   <label class="form-label" for="dni">DNI</label>
                 </div>
-                  <p style="font-size: small ; color:#9b9b9b">*Los cambios de fecha estarán sujetos a disponibilidad del hotel.</p>
+                  <p style="font-size: small ; color:#9b9b9b">*Las reservas estaran sujetas a disponibilidad.</p>
               </div>
                 <button class="button button-primary button-square button-block button-effect-ujarak" id="submitForm" formmethod="post" type="submit"><span>Reservar</span></button>
               </div>
@@ -184,8 +184,16 @@
   </div>
 </section>
 <script>
-  document.querySelector('#submitForm').addEventListener('click', () => {
-    document.querySelector('form').submit();
+    document.querySelector('#submitForm').addEventListener('click', (event) => {
+      const form = document.querySelector('form');
+
+      if (form.checkValidity()) {
+          form.submit(); 
+      } else {
+          event.preventDefault(); 
+          alert('Por favor completa todos los campos requeridos.');
+      }
+
   });
 
   $('#inicio_reserva').on('change', function (event, date) {
